<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvMissing">Aún no hay clientes...</string>
    <string name="tvAdd">Toca el boton &quot;+&quot; para añadir un nuevo cliente</string>
    <string name="btnAñadir">Añadir Cliente</string>
    <string name="tvRequired">&#160;&#160;*Obligatorio</string>
    <string name="nameHint">Nombre</string>
    <string name="emailHint">Email</string>
    <string name="phoneHint">Teléfono</string>
    <string name="cityHint">Ciudad</string>
    <string name="AddressHint">Dirección</string>
    <string name="toastMessage">Próximamente...</string>

    <string name="tvName" >Nombre:&#160;</string>
    <string name="tvEmail" translatable="false">Email:&#160;</string>
    <string name="tvPhone">Teléfono:&#160;</string>
    <string name="tvCity">Ciudad:&#160;</string>
    <string name="tvAddress">Dirección:&#160;</string>
    <string name="btnEditar">Editar</string>

</resources>