<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewmodel"
            type="com.murray.customer.ui.CustomerCreationViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.murray.customer.ui.CustomerCreationFragment">

        <Button
            android:id="@+id/button"
            android:layout_width="148dp"
            android:layout_height="46dp"
            android:text="@string/btnAñadir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAddress"
            app:layout_constraintVertical_bias="0.1"
            android:onClick="@{()->viewmodel.validateCustomer()}"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="360dp"
            android:layout_height="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.288"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:errorEnabled="true">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvRequired" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableEnd="@drawable/ic_name"
                android:text="@={viewmodel.name}"
                android:hint="@string/nameHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="359dp"
            android:layout_height="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.288"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18"
            app:errorEnabled="true">

            <TextView
                android:id="@+id/tvMail"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvRequired" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableEnd="@drawable/ic_email"
                android:text="@={viewmodel.email}"
                android:hint="@string/emailHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="359dp"
            android:layout_height="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.288"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.31">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePhone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableEnd="@drawable/ic_phone"
                android:hint="@string/phoneHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCity"
            android:layout_width="359dp"
            android:layout_height="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.288"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.44">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieCity"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableEnd="@drawable/ic_city"
                android:hint="@string/cityHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddress"
            android:layout_width="359dp"
            android:layout_height="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.288"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.57">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieAddress"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableEnd="@drawable/ic_address"
                android:hint="@string/AddressHint" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>